package domain.deliverycompany;

public class ShippedItemList {
}
