package domain.goods;

public interface Goods {
}
