package domain.goods;

public enum Terminal implements Goods {
    IPHONE,AQUOS,XPERIA
}
