package domain.stock;

public interface Stock {
    public void allocate(StockRequestDetails stockRequestDetails);
}
