@startuml

package application{
class TerminalApplication
}
package order{
class Order
class OrderDetails

TerminalApplication -> OrderDetails
Order -l-> OrderDetails
}
package stock{
class Stock
class StockRequestDetails

TerminalApplication -> StockRequestDetails
Stock -l-> StockRequestDetails
}


package equipment{
    class EquipmentEntity
    package event{
        class RegisterEvent
        class ContractEvent
    }
    EquipmentEntity -> TerminalCharge
}
EquipmentEntity -> RegisterEvent
EquipmentEntity -> ContractEvent
RegisterEvent -[hidden]d-> ContractEvent

package DeliveryCompany{
class ShippedItemList
class ShippedListForPacking
Interface Repository

ShippedListForPacking -> ShippedItemList
ShippedListForPacking -[hidden]u-> Repository
}

package shipping{
    package evnet{
        class ReceiptEvent
        class RequestEvent
        class ShipEvent
        class ArrivalEvent
        class NotArrivalEvent
    }

RequestEvent -u-> ReceiptEvent
ReceiptEvent -l-> ShippingDetails
RequestEvent -r-> Packing
Packing -u-> ShippingDetails
ShippingEntity -> ReceiptEvent
ShippingEntity -> RequestEvent
ShippingEntity -> ShipEvent
ShippingEntity -> ArrivalEvent
ShippingEntity -> NotArrivalEvent
TerminalApplication -> ShippingDetails
ShipEvent o---> ShippedEquipmentList
ShippedListForPacking -l-> ShipEvent
ShipEvent -[hidden]u- RequestEvent
Repository -> Packing
RegisterEvent -u-> ShipEvent
ContractEvent -u-> ArrivalEvent
ArrivalEvent -[hidden]u- ShipEvent
NotArrivalEvent -[hidden]u- ArrivalEvent

}


package goods{
interface Goods
class Terminal
Goods <|-- Terminal

StockRequestDetails -u-> Goods
}
package contract{}
package linecontract{
class LineContractList
}
package purchasedterminal{
class PurchasedTerminalList
}
package check{
class TerminalApplicationPolicy
TerminalApplicationPolicy -d-> TerminalApplication
}
package charge{
class ChargeItem
interface ChargeRep
}
TerminalCharge -d-> ChargeItem
ChargeRep -l-> ChargeItem


application -> goods
TerminalApplicationPolicy -r-> contract.Contract
TerminalApplicationPolicy -r-> LineContractList
TerminalApplicationPolicy -r-> PurchasedTerminalList
RegisterEvent -u-> contract.Contract

order -u-> goods
ShippingDetails -u-> Goods

@enduml